generated/glangParser.py
# Generated from glang.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class glangParser ( Parser ):

    grammarFileName = "glang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'return'", "'if'", "'else'", 
                     "'for'", "<INVALID>", "'null'", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+='", "'+'", "'-='", "'-'", 
                     "'/='", "'/'", "'*='", "'='", "'*'", "'.'", "'#'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&'", 
                     "'|'", "'!'", "','", "':'", "';'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'\"'", "'''" ]

    symbolicNames = [ "<INVALID>", "DEF", "RETURN", "IF", "ELSE", "FOR", 
                      "EMPTY_ARRAY", "NULL", "TRUE", "FALSE", "NUMBER", 
                      "INTEGER", "STRING", "DQUOT_STRING", "COLOR", "IDENTIFIER", 
                      "PLUS_EQ", "PLUS", "MINUS_EQ", "MINUS", "DIV_EQ", 
                      "DIV", "MUL_EQ", "ASSIGNMENT", "MUL", "DOT", "COLOR_SIGN", 
                      "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "AND", "OR", 
                      "NOT", "COMMA", "COLON", "SC", "L", "R", "SQ_L", "SQ_R", 
                      "CURLY_L", "CURLY_R", "DQUOT", "QUOT", "WS" ]

    RULE_script = 0
    RULE_array = 1
    RULE_string = 2
    RULE_color = 3
    RULE_data_point = 4
    RULE_data_point_colored = 5
    RULE_named_value = 6
    RULE_named_value_colored = 7
    RULE_j_value = 8
    RULE_j_member = 9
    RULE_j_object = 10
    RULE_id_list = 11
    RULE_arg_list = 12
    RULE_function = 13
    RULE_function_call = 14
    RULE_for_loop = 15
    RULE_if_cond = 16
    RULE_number = 17
    RULE_math_expression = 18
    RULE_plus_minus = 19
    RULE_mul_div = 20
    RULE_identifier_ext = 21
    RULE_l_value = 22
    RULE_r_value_list = 23
    RULE_r_value = 24
    RULE_logical_expression = 25
    RULE_comparator = 26
    RULE_binary = 27
    RULE_boolean = 28
    RULE_assignment = 29
    RULE_inplace_math_op = 30
    RULE_return_statement = 31
    RULE_operation = 32
    RULE_line_operation = 33
    RULE_sequential_code = 34
    RULE_segment = 35

    ruleNames =  [ "script", "array", "string", "color", "data_point", "data_point_colored", 
                   "named_value", "named_value_colored", "j_value", "j_member", 
                   "j_object", "id_list", "arg_list", "function", "function_call", 
                   "for_loop", "if_cond", "number", "math_expression", "plus_minus", 
                   "mul_div", "identifier_ext", "l_value", "r_value_list", 
                   "r_value", "logical_expression", "comparator", "binary", 
                   "boolean", "assignment", "inplace_math_op", "return_statement", 
                   "operation", "line_operation", "sequential_code", "segment" ]

    EOF = Token.EOF
    DEF=1
    RETURN=2
    IF=3
    ELSE=4
    FOR=5
    EMPTY_ARRAY=6
    NULL=7
    TRUE=8
    FALSE=9
    NUMBER=10
    INTEGER=11
    STRING=12
    DQUOT_STRING=13
    COLOR=14
    IDENTIFIER=15
    PLUS_EQ=16
    PLUS=17
    MINUS_EQ=18
    MINUS=19
    DIV_EQ=20
    DIV=21
    MUL_EQ=22
    ASSIGNMENT=23
    MUL=24
    DOT=25
    COLOR_SIGN=26
    EQ=27
    NEQ=28
    LT=29
    LTE=30
    GT=31
    GTE=32
    AND=33
    OR=34
    NOT=35
    COMMA=36
    COLON=37
    SC=38
    L=39
    R=40
    SQ_L=41
    SQ_R=42
    CURLY_L=43
    CURLY_R=44
    DQUOT=45
    QUOT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(glangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(glangParser.FunctionContext,i)


        def sequential_code(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(glangParser.Sequential_codeContext)
            else:
                return self.getTypedRuleContext(glangParser.Sequential_codeContext,i)


        def getRuleIndex(self):
            return glangParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = glangParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << glangParser.DEF) | (1 << glangParser.RETURN) | (1 << glangParser.IF) | (1 << glangParser.FOR) | (1 << glangParser.IDENTIFIER) | (1 << glangParser.COLOR_SIGN))) != 0):
                self.state = 74
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [glangParser.DEF]:
                    self.state = 72
                    self.function()
                    pass
                elif token in [glangParser.RETURN, glangParser.IF, glangParser.FOR, glangParser.IDENTIFIER, glangParser.COLOR_SIGN]:
                    self.state = 73
                    self.sequential_code()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return glangParser.RULE_array

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FilledArrayContext(ArrayContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a glangParser.ArrayContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SQ_L(self):
            return self.getToken(glangParser.SQ_L, 0)
        def SQ_R(self):
            return self.getToken(glangParser.SQ_R, 0)
        def r_value_list(self):
            return self.getTypedRuleContext(glangParser.R_value_listContext,0)

        def r_value(self):
            return self.getTypedRuleContext(glangParser.R_valueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilledArray" ):
                listener.enterFilledArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilledArray" ):
                listener.exitFilledArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilledArray" ):
                return visitor.visitFilledArray(self)
            else:
                return visitor.visitChildren(self)


    class EmptyArrayContext(ArrayContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a glangParser.ArrayContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EMPTY_ARRAY(self):
            return self.getToken(glangParser.EMPTY_ARRAY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyArray" ):
                listener.enterEmptyArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyArray" ):
                listener.exitEmptyArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyArray" ):
                return visitor.visitEmptyArray(self)
            else:
                return visitor.visitChildren(self)



    def array(self):

        localctx = glangParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_array)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [glangParser.EMPTY_ARRAY]:
                localctx = glangParser.EmptyArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(glangParser.EMPTY_ARRAY)
                pass
            elif token in [glangParser.SQ_L]:
                localctx = glangParser.FilledArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(glangParser.SQ_L)
                self.state = 83
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 81
                    self.r_value_list()
                    pass

                elif la_ == 2:
                    self.state = 82
                    self.r_value()
                    pass


                self.state = 85
                self.match(glangParser.SQ_R)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(glangParser.STRING, 0)

        def DQUOT_STRING(self):
            return self.getToken(glangParser.DQUOT_STRING, 0)

        def getRuleIndex(self):
            return glangParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = glangParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not(_la==glangParser.STRING or _la==glangParser.DQUOT_STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLOR(self):
            return self.getToken(glangParser.COLOR, 0)

        def getRuleIndex(self):
            return glangParser.RULE_color

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColor" ):
                listener.enterColor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColor" ):
                listener.exitColor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColor" ):
                return visitor.visitColor(self)
            else:
                return visitor.visitChildren(self)




    def color(self):

        localctx = glangParser.ColorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_color)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(glangParser.COLOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_pointContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # NumberContext
            self.y = None # NumberContext

        def LT(self):
            return self.getToken(glangParser.LT, 0)

        def COMMA(self):
            return self.getToken(glangParser.COMMA, 0)

        def GT(self):
            return self.getToken(glangParser.GT, 0)

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(glangParser.NumberContext)
            else:
                return self.getTypedRuleContext(glangParser.NumberContext,i)


        def getRuleIndex(self):
            return glangParser.RULE_data_point

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_point" ):
                listener.enterData_point(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_point" ):
                listener.exitData_point(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_point" ):
                return visitor.visitData_point(self)
            else:
                return visitor.visitChildren(self)




    def data_point(self):

        localctx = glangParser.Data_pointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_data_point)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(glangParser.LT)
            self.state = 94
            localctx.x = self.number()
            self.state = 95
            self.match(glangParser.COMMA)
            self.state = 96
            localctx.y = self.number()
            self.state = 97
            self.match(glangParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_point_coloredContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # NumberContext
            self.y = None # NumberContext

        def LT(self):
            return self.getToken(glangParser.LT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(glangParser.COMMA)
            else:
                return self.getToken(glangParser.COMMA, i)

        def GT(self):
            return self.getToken(glangParser.GT, 0)

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(glangParser.NumberContext)
            else:
                return self.getTypedRuleContext(glangParser.NumberContext,i)


        def color(self):
            return self.getTypedRuleContext(glangParser.ColorContext,0)


        def identifier_ext(self):
            return self.getTypedRuleContext(glangParser.Identifier_extContext,0)


        def getRuleIndex(self):
            return glangParser.RULE_data_point_colored

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_point_colored" ):
                listener.enterData_point_colored(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_point_colored" ):
                listener.exitData_point_colored(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_point_colored" ):
                return visitor.visitData_point_colored(self)
            else:
                return visitor.visitChildren(self)




    def data_point_colored(self):

        localctx = glangParser.Data_point_coloredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_data_point_colored)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(glangParser.LT)
            self.state = 100
            localctx.x = self.number()
            self.state = 101
            self.match(glangParser.COMMA)
            self.state = 102
            localctx.y = self.number()
            self.state = 103
            self.match(glangParser.COMMA)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [glangParser.COLOR]:
                self.state = 104
                self.color()
                pass
            elif token in [glangParser.IDENTIFIER]:
                self.state = 105
                self.identifier_ext(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 108
            self.match(glangParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.label = None # StringContext
            self.value = None # NumberContext

        def LT(self):
            return self.getToken(glangParser.LT, 0)

        def COMMA(self):
            return self.getToken(glangParser.COMMA, 0)

        def GT(self):
            return self.getToken(glangParser.GT, 0)

        def string(self):
            return self.getTypedRuleContext(glangParser.StringContext,0)


        def number(self):
            return self.getTypedRuleContext(glangParser.NumberContext,0)


        def getRuleIndex(self):
            return glangParser.RULE_named_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_value" ):
                listener.enterNamed_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_value" ):
                listener.exitNamed_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamed_value" ):
                return visitor.visitNamed_value(self)
            else:
                return visitor.visitChildren(self)




    def named_value(self):

        localctx = glangParser.Named_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_named_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(glangParser.LT)
            self.state = 111
            localctx.label = self.string()
            self.state = 112
            self.match(glangParser.COMMA)
            self.state = 113
            localctx.value = self.number()
            self.state = 114
            self.match(glangParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_value_coloredContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.label = None # StringContext
            self.value = None # NumberContext

        def LT(self):
            return self.getToken(glangParser.LT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(glangParser.COMMA)
            else:
                return self.getToken(glangParser.COMMA, i)

        def GT(self):
            return self.getToken(glangParser.GT, 0)

        def string(self):
            return self.getTypedRuleContext(glangParser.StringContext,0)


        def number(self):
            return self.getTypedRuleContext(glangParser.NumberContext,0)


        def color(self):
            return self.getTypedRuleContext(glangParser.ColorContext,0)


        def identifier_ext(self):
            return self.getTypedRuleContext(glangParser.Identifier_extContext,0)


        def getRuleIndex(self):
            return glangParser.RULE_named_value_colored

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_value_colored" ):
                listener.enterNamed_value_colored(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_value_colored" ):
                listener.exitNamed_value_colored(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamed_value_colored" ):
                return visitor.visitNamed_value_colored(self)
            else:
                return visitor.visitChildren(self)




    def named_value_colored(self):

        localctx = glangParser.Named_value_coloredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_named_value_colored)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(glangParser.LT)
            self.state = 117
            localctx.label = self.string()
            self.state = 118
            self.match(glangParser.COMMA)
            self.state = 119
            localctx.value = self.number()
            self.state = 120
            self.match(glangParser.COMMA)
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [glangParser.COLOR]:
                self.state = 121
                self.color()
                pass
            elif token in [glangParser.IDENTIFIER]:
                self.state = 122
                self.identifier_ext(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 125
            self.match(glangParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class J_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return glangParser.RULE_j_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ObjectJValueContext(J_valueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a glangParser.J_valueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def j_object(self):
            return self.getTypedRuleContext(glangParser.J_objectContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectJValue" ):
                listener.enterObjectJValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectJValue" ):
                listener.exitObjectJValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectJValue" ):
                return visitor.visitObjectJValue(self)
            else:
                return visitor.visitChildren(self)


    class RegularJValueContext(J_valueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a glangParser.J_valueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(glangParser.StringContext,0)

        def number(self):
            return self.getTypedRuleContext(glangParser.NumberContext,0)

        def boolean(self):
            return self.getTypedRuleContext(glangParser.BooleanContext,0)

        def NULL(self):
            return self.getToken(glangParser.NULL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegularJValue" ):
                listener.enterRegularJValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegularJValue" ):
                listener.exitRegularJValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegularJValue" ):
                return visitor.visitRegularJValue(self)
            else:
                return visitor.visitChildren(self)


    class ArrayJValueContext(J_valueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a glangParser.J_valueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SQ_L(self):
            return self.getToken(glangParser.SQ_L, 0)
        def j_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(glangParser.J_valueContext)
            else:
                return self.getTypedRuleContext(glangParser.J_valueContext,i)

        def SQ_R(self):
            return self.getToken(glangParser.SQ_R, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(glangParser.COMMA)
            else:
                return self.getToken(glangParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayJValue" ):
                listener.enterArrayJValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayJValue" ):
                listener.exitArrayJValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayJValue" ):
                return visitor.visitArrayJValue(self)
            else:
                return visitor.visitChildren(self)


    class EmptyArrayJValueContext(J_valueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a glangParser.J_valueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EMPTY_ARRAY(self):
            return self.getToken(glangParser.EMPTY_ARRAY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyArrayJValue" ):
                listener.enterEmptyArrayJValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyArrayJValue" ):
                listener.exitEmptyArrayJValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyArrayJValue" ):
                return visitor.visitEmptyArrayJValue(self)
            else:
                return visitor.visitChildren(self)



    def j_value(self):

        localctx = glangParser.J_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_j_value)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [glangParser.CURLY_L]:
                localctx = glangParser.ObjectJValueContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.j_object()
                pass
            elif token in [glangParser.NULL, glangParser.TRUE, glangParser.FALSE, glangParser.NUMBER, glangParser.STRING, glangParser.DQUOT_STRING, glangParser.IDENTIFIER, glangParser.MINUS, glangParser.L]:
                localctx = glangParser.RegularJValueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [glangParser.STRING, glangParser.DQUOT_STRING]:
                    self.state = 128
                    self.string()
                    pass
                elif token in [glangParser.NUMBER, glangParser.IDENTIFIER, glangParser.MINUS, glangParser.L]:
                    self.state = 129
                    self.number()
                    pass
                elif token in [glangParser.TRUE, glangParser.FALSE]:
                    self.state = 130
                    self.boolean()
                    pass
                elif token in [glangParser.NULL]:
                    self.state = 131
                    self.match(glangParser.NULL)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [glangParser.SQ_L]:
                localctx = glangParser.ArrayJValueContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(glangParser.SQ_L)
                self.state = 135
                self.j_value()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==glangParser.COMMA:
                    self.state = 136
                    self.match(glangParser.COMMA)
                    self.state = 137
                    self.j_value()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 143
                self.match(glangParser.SQ_R)
                pass
            elif token in [glangParser.EMPTY_ARRAY]:
                localctx = glangParser.EmptyArrayJValueContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.match(glangParser.EMPTY_ARRAY)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class J_memberContext(ParserRuleContext):
